# Nested

./: .importlinter  README.md  package-lock.json  package.json  pyproject.toml
src/model/: area.py  project.py  task.py
src/nested/app/: app.py
src/nested/model/: area.py  comment.py  project.py  task.py  tasktype.py  utilities.py
src/nested/service/: __init__.py  dataService.py  repository.py
